--- a/views/home.erb
+++ b/views/home.erb
@@ -1,115 +1,4 @@
 <div container="fluid">
+<h1>Internal Service Error :)</h1>
 
-<%wide="width:150px"%>
-<p>Log in, track your day's activity, and see how you stack up against your peers.</p>
-
-<h3>Point Leaders (as of <%=date_two_weeks_ago%>)</h3>
-<% if all_scores[0] !=nil%>
-<table id="points_leaders" class="table">
-
-<tr>
-
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=all_scores[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Overall</h4>
-        <p><%=all_scores[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=beverage_score[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Beverages</h4>
-        <p><%=beverage_score[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=pong_score[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Ping Pong</h4>
-        <p><%=pong_score[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=network_score[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Networking</h4>
-        <p><%=network_score[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=learning_score[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Learning</h4>
-        <p><%=learning_score[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-
-  <td class="col-md-1" style=<%=wide%>>
-    <div class="thumbnail" style="height:240px; width:130px">
-      <img class="img-thumbnail" style="height: 115px" src=<%=badass_code_score[0]["image_url"]%>>
-      <div class="caption">
-        <h4>Code</h4>
-        <p><%=badass_code_score[0]["username"]%></p>
-      </div>
-    </div>
-  </td>
-</tr>
-
-
-</table>
-<%end%>
-
-  <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://socialgscholar.herokuapp.com">Tweet</a>
-  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-
-<div id="leaderboard">
-<hr />
-<h3>Scoreboard (as of <%=date_two_weeks_ago%>)</h3>
-
-  <table class="table table-bordered table-hover">
-    <thead style="background-color:black; color:white">
-      <td style=<%=wide%>>Name</td>
-      <td style=<%=wide%>>Overall</td>
-      <td style=<%=wide%>>Beverages</td>
-      <td style=<%=wide%>>Ping Pong</td>
-      <td style=<%=wide%>>Networking</td>
-      <td style=<%=wide%>>Learning</td>
-      <td style=<%=wide%>>Code</td>
-    </thead>
-    <tbody>
-      <%all_scores.each do |person|%>
-        <%if session[:user_id] == person["id"]%>
-          <%highlight = "background-color:lightsalmon"%>
-        <%else%>
-          <%highlight = "background-color:white;"%>
-        <%end%>
-        <tr style=<%=highlight%>>
-          <td style=<%=wide%> ><a href="/activity/<%=person['id']%>"><%=person["username"]%></a></td>
-          <td id ="total_score" style=<%=wide%> ><%=person["total_score"]%></td>
-          <td id="beer" style=<%=wide%> ><%=person["beer"]%></td>
-          <td id="pong" style=<%=wide%> ><%=person["pong"]%></td>
-          <td id="network" style=<%=wide%> ><%=person["network"]%></td>
-          <td id="learning" style=<%=wide%> ><%=person["learning"]%></td>
-          <td id="badass_code" style=<%=wide%> ><%=person["code"]%></td>
-        </tr>
-      <%end%>
-    </tbody>
-  </table>
 </div>
-</div>
-
