added user registration functionality and related views and notices

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,11 @@
-<div container="fluid">
-<h1>Internal Service Error :)</h1>
+<div>
+
+<a href = "/new_user">Sign Up</a>
+<form>
+  <button>"Login"</button>
+</form>
+
+
+<h1>Charity Exchange)</h1>
 
 </div>
