added ability to edit user info

--- a/views/home.erb
+++ b/views/home.erb
@@ -19,7 +19,7 @@
     <form method="POST" action="/logout" >
       <button>Logout</button>
     </form>
-    <a href="/users/edit/<%=session[:user_id]%>">Edit Profile</a>
+    <a href="/users/edit">Edit Profile</a>
 
   <%end%>
   <h1>Charity Exchange</h1>
