added an admin field to the users.  Added cancel links to each submit form

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,4 +1,5 @@
 <div>
+  <a href="/charities">charities | </a>
 
   <%if !session[:user_id]%>
     <a href = "/users/new">Sign Up</a>
@@ -23,8 +24,6 @@
 
   <%end%>
   <h1>Charity Exchange</h1>
-  <a href="/charities/new">Register a new charity</a>
-
 
 
 </div>
