--- a/views/new_charity.erb
+++ b/views/new_charity.erb
@@ -19,6 +19,9 @@
   <input id="poc_email" name="poc_email"/>
   <br/>
   <input type="hidden" name="status" value="unregistered"/>
+  <br><br>
   <button>Submit</button>
+  <a href="/charities">Cancel</a>
 
 </form>
+
