--- a/views/edit_user.erb
+++ b/views/edit_user.erb
@@ -15,4 +15,5 @@
   <input id="profile_picture" name="profile_picture" value="<%=current_user["profile_picture"]%>"/>
   <br/>
   <button>Submit</button>
+  <a href="/">Cancel</a>
 </form>
