--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -17,8 +17,9 @@
   <label for="profile_picture">Profile Picture:</label>
   <br/>
   <input id="profile_picture" name="profile_picture"/>
-  <br/>
+  <br/><br>
   <button>Submit</button>
+  <a href="/">Cancel</a>
 
 </form>
 
