added the ability for admins to log the MVPs as the project progresses.

--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,6 @@
 <div>
   <a href="/charities">charities | </a>
+  <a href="/mvps">mvps | </a>
 
   <%if !session[:user_id]%>
     <a href = "/users/new">Sign Up</a>
