css formatting, moved header information to layout page, refactored tests, and corrected error in the user update route.  Provided limitation on who could access the user update and user show pages.

--- a/views/index_charity.erb
+++ b/views/index_charity.erb
@@ -1,4 +1,6 @@
-<h1>Charities</h1>
+<div id="index_charities">
+
+
 <a href="/charities/new">Register a new charity</a><br>
 <a href="/">Back to Home</a>
 
@@ -25,3 +27,4 @@
 </table>
 
 
+</div>
