--- a/views/edit_user.erb
+++ b/views/edit_user.erb
@@ -1,6 +1,6 @@
 <h1>Update Your Profile</h1>
 
-<form method="POST" action="/users/<%=session[:email]%>">
+<form method="POST" action="/users/<%=session[:user_id]%>">
   <input type="hidden" name="_method" value="PATCH"/>
   <label for="email">Email:</label>
   <br/>
@@ -15,5 +15,5 @@
   <input id="profile_picture" name="profile_picture" value="<%=current_user["profile_picture"]%>"/>
   <br/>
   <button>Submit</button>
-  <a href="/">Cancel</a>
+  <a href="/users/<%=session[:user_id]%>">Cancel</a>
 </form>
