--- a/views/home.erb
+++ b/views/home.erb
@@ -1,30 +1,8 @@
-<div>
-  <a href="/charities">charities | </a>
-  <a href="/mvps">mvps | </a>
+<div id="homepage">
 
-  <%if !session[:user_id]%>
-    <a href = "/users/new">Sign Up</a>
 
-    <form method="POST" action="/login">
-      <label for="email">Email:</label>
-      <br/>
-      <input type="email" id="email" name="email"/>
-      <br/>
-      <label for="password">Password:</label>
-      <br/>
-      <input type="password" id="password" name="password"/>
-      <br/>
-      <button>Login</button>
-    </form>
 
-  <%else%>
-    <form method="POST" action="/logout" >
-      <button>Logout</button>
-    </form>
-    <a href="/users/edit">Edit Profile</a>
 
-  <%end%>
-  <h1>Charity Exchange</h1>
 
 
 </div>
