--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,60 +5,46 @@
   <title>CharityX</title>
 
   <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">-->
+  <link rel="stylesheet" type="text/css" href="/style.css">
+
 </head>
 
-<div class="container-fluid">
+<div class="wrapper">
 <body>
 
-    <!--<nav class="navbar navbar-default" role="navigation">-->
-      <!--<div class="container">-->
-        <!--&lt;!&ndash; Brand and toggle get grouped for better mobile display &ndash;&gt;-->
-        <!--<div class="navbar-header">-->
-          <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">-->
-            <!--<span class="sr-only">Toggle navigation</span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-            <!--<span class="icon-bar"></span>-->
-          <!--</button>-->
-          <!--<a class="navbar-brand" href="/">The Social gScholar</a>-->
-        <!--</div>-->
 
-        <!--&lt;!&ndash; Collect the nav links, forms, and other content for toggling &ndash;&gt;-->
-        <!--<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">-->
+  <section class="navbar">
+    <article class="inline left nav_name">Charity Exchange</article>
+    <article class="inline right">
+      <article class="inline"> <a class="navbar_links" href="/charities">Charities</a> |</article>
+      <article class="inline"> <a class="navbar_links"  href="/mvps">MVPs</a> |</article>
+      <%if !session[:user_id]%>
+        <article class="inline">
+          <form  method="POST" action="/login">
+            <label for="email">Email:</label>
+            <input class="sm" type="email" id="email" name="email"/>
+            <label for="password">Password:</label>
+            <input class="xs" type="password" id="password" name="password"/>
+            <button class="btn">Login</button>
+          </form>
+        </article>
+        <article class="inline"><a class="navbar_links" href="/users/new">Sign Up</a></article>
+      <%else%>
+          <article class="inline">
+            <a class="navbar_links" href="/users/<%=session[:user_id]%>/edit">Edit Profile &nbsp;&nbsp;&nbsp;</a>
+          </article>
+          <article class="inline">
+          <form method="POST" action="/logout" >
+            <button class="btn">Logout</button>
+          </form>
+        </article>
 
-          <!--<ul class="nav navbar-nav navbar-right">-->
-            <!--< %if session[:user_id]%>-->
-              <!--< %user = @database_connection.sql("SELECT * FROM users WHERE id = #{session[:user_id].to_i}").first%>-->
-              <!--<li><a href="/scores/new">Log Activity</a></li>-->
-              <!--<li><a href="/logout">Logout</a></li>-->
-              <!--<li><a href="/users/edit">Edit Profile</a></li>-->
-              <!--<li><a>Logged in as < %=user["username"]%></a></li>-->
-            <!--< %else%>-->
-
-
-              <!--<li><a href="/users/new">Signup</a></li>-->
-          <!--</ul>-->
-              <!--<form class="navbar-form navbar-right" role="form" method="POST" action="/login">-->
-                <!--<div class="form-group">-->
-                <!--<label for="username">Username:</label>-->
-                <!--<input id="username" class="form-control" name="username">-->
-                <!--<label for="password">Password:</label>-->
-                <!--<input id="password" class="form-control" type="password" name="password">-->
-
-                <!--<button class="btn btn-default btn-sm">Login</button>-->
-                <!--</div>-->
-              <!--</form>-->
-
-            <!--< %end%>-->
-
-          <!--</ul>-->
-        <!--</div>&lt;!&ndash; /.navbar-collapse &ndash;&gt;-->
-      <!--</div>&lt;!&ndash; /.container-fluid &ndash;&gt;-->
-    <!--</nav>-->
+      <%end%>
+    </article>
+  </section>
 
   <%= flash[:notice] if flash[:notice]%>
-
   <%= yield %>
 
 </body>
