added accounts and deposits tables to the dbase for the purpose of allowing usersto fund their accounts and view their account balances.

--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -2,7 +2,20 @@
 <h1>Account Details</h1>
 <hr />
 
-<a href="/accounts/edit">Fund My Account</a>
+<table>
+  <thead>
+  <td>Amount</td>
+  <td>User ID</td>
+  </thead>
+  <tbody>
+  <tr>
+    <td>$<%=account["amount"]%></td>
+    <td><%=account["user_id"]%></td>
+  </tr>
+  </tbody>
+</table>
+
+<a href="/deposits/new/<%=account["id"]%>">Fund My Account</a>
 
 
 
