--- a/views/new_deposit.erb
+++ b/views/new_deposit.erb
@@ -1,6 +1,9 @@
 <div id="new_deposits">
 
 <form method="POST" action="/deposits">
+  <input type="hidden" name="account_id" value="<%=account["id"]%>"/>
+
+
   <label for="amount">Amount:</label><br/>
   <input id= "amount" name="amount"/><br/>
   <label for="cc_number">Credit Card Number:</label><br/>
@@ -19,3 +22,6 @@
 
 
 </div>
+
+
+<!--id, amount, cc_number, exp_date, name_on_card, cc_typ-->
