Refactored tests, added the ability to save dollar amounts as pennies in dbase, and revised the user's show page to show deposits made

--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -4,13 +4,13 @@
 
 <table>
   <thead>
+  <td>Deposits</td>
   <td>Amount</td>
-  <td>User ID</td>
   </thead>
   <tbody>
   <tr>
-    <td>$<%=account["amount"]%></td>
-    <td><%=account["user_id"]%></td>
+    <td id="deposits">$<%=deposit_total%></td>
+    <td id="net_amount">$<%=net_amount%></td>
   </tr>
   </tbody>
 </table>
