--- a/views/new_deposit.erb
+++ b/views/new_deposit.erb
@@ -9,7 +9,7 @@
   <label for="cc_number">Credit Card Number:</label><br/>
   <input id= "cc_number" name="cc_number"/><br/>
   <label for="exp_date">Exp Date:</label><br/>
-  <input id= "exp_date" name="exp_date"/><br/>
+  <input id= "exp_date" name="exp_date" type="date"/><br/>
   <label for="name_on_card">Name on Card:</label><br/>
   <input id= "name_on_card" name="name_on_card"/><br/>
   <input type="radio" name="radio_cc_type" id="visa" value="visa"/>
