--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -5,17 +5,20 @@
 <table>
   <thead>
   <td>Deposits</td>
+  <td>Distributions</td>
   <td>Amount</td>
   </thead>
   <tbody>
   <tr>
     <td id="deposits">$<%=deposit_total%></td>
+    <td id="distributions">$<%=distribution_total%></td>
     <td id="net_amount">$<%=net_amount%></td>
   </tr>
   </tbody>
 </table>
 
-<a href="/deposits/new/<%=account["id"]%>">Fund My Account</a>
+<a href="/deposits/new/<%=account["id"]%>">Fund My Account</a> |
+<a href="/distributions/new/<%=account["id"]%>">Distribute Funds</a>
 
 
 
