refactored the render page or redirect method which evaluates whether the information being GET belongs to the sesssion user

--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -17,10 +17,10 @@
   </tbody>
 </table>
 
-<a href="/deposits/new/<%=account["id"]%>">Fund My Account</a> |
-<a href="/distributions/new/<%=account["id"]%>">Distribute Funds</a>
+<a href="/deposits/new">Fund My Account</a> |
+<a href="/distributions/new">Distribute Funds</a>
 
-
+<a href="/deposits">Show Deposit History</a>
 
 
 
