--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,10 +31,13 @@
         </article>
         <article class="inline"><a class="navbar_links" href="/users/new">Sign Up</a></article>
       <%else%>
-          <article class="inline">
-            <a class="navbar_links" href="/users/<%=session[:user_id]%>/edit">Edit Profile &nbsp;&nbsp;&nbsp;</a>
-          </article>
-          <article class="inline">
+        <article class="inline">
+          <a class="navbar_links" href="/users/<%=session[:user_id]%>">Account Details</a> |
+        </article>
+        <article class="inline">
+          <a class="navbar_links" href="/users/<%=session[:user_id]%>/edit">Edit Profile &nbsp;&nbsp;&nbsp;</a>
+        </article>
+        <article class="inline">
           <form method="POST" action="/logout" >
             <button class="btn">Logout</button>
           </form>
