Added the ability to view a summary of each distribution and each deposit made

--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -21,6 +21,7 @@
 <a href="/distributions/new">Distribute Funds</a>
 
 <a href="/deposits">Show Deposit History</a>
+<a href="/distributions">Show Distribution History</a>
 
 
 
