--- a/views/index_deposit.erb
+++ b/views/index_deposit.erb
@@ -1,6 +1,21 @@
 <div id="index_deposits">
 
 
+<table>
+  <thead>
+    <th>Amount</th>
+  </thead>
+  <tbody>
+  <%deposits_array.each do |deposit|%>
+    <tr>
+      <td>$<%=deposit["amount"].to_i / 100%></td>
+    </tr>
+  <%end%>
+  </tbody>
+</table>
+
+
+
 
 
 
