--- a/views/new_deposit.erb
+++ b/views/new_deposit.erb
@@ -1,7 +1,7 @@
 <div id="new_deposits">
 
 <form method="POST" action="/deposits">
-  <input type="hidden" name="account_id" value="<%=account["id"]%>"/>
+  <input type="hidden" name="account_id" value="<%=account.id%>"/>
 
 
   <label for="amount">Amount:</label><br/>
