--- a/views/index_deposit.erb
+++ b/views/index_deposit.erb
@@ -8,7 +8,7 @@
   <tbody>
   <%deposits_array.each do |deposit|%>
     <tr>
-      <td>$<%=deposit["amount"].to_i / 100%></td>
+      <td>$<%=deposit.amount.to_i / 100%></td>
     </tr>
   <%end%>
   </tbody>
