--- a/views/new_distribution.erb
+++ b/views/new_distribution.erb
@@ -1,13 +1,13 @@
 <div id="new_distributions">
 
   <form method="POST" action="/distributions">
-    <input type="hidden" name="account_id" value="<%=account["id"]%>"/>
+    <input type="hidden" name="account_id" value="<%=account.id%>"/>
     <label for="amount">Amount:</label><br/>
     <input id= "amount" name="amount"/><br/>
     <label for="charity_dd">Select a Charity</label><br/>
     <select id="charity_dd" name="charity_dd">
       <%@charities_for_selection.each do |charity_hash|%>
-        <option value="<%=charity_hash["name"]%>"><%=charity_hash["name"]%></option>
+        <option value="<%=charity_hash.name%>"><%=charity_hash.name%></option>
       <%end%>
     </select>
     <br/>
