--- a/views/index_deposit.erb
+++ b/views/index_deposit.erb
@@ -6,9 +6,9 @@
     <th>Amount</th>
   </thead>
   <tbody>
-  <%deposits_array.each do |deposit|%>
+  <%deposits.each do |deposit|%>
     <tr>
-      <td>$<%=deposit.amount.to_i / 100%></td>
+      <td>$<%=deposit.amount / 100%></td>
     </tr>
   <%end%>
   </tbody>
