--- a/views/index_mvp.erb
+++ b/views/index_mvp.erb
@@ -2,7 +2,7 @@
 <a href="/">Back to Home</a>
 
 <%if current_user%>
-  <%if current_user.is_admin == "t"%>
+  <%if current_user.is_admin?%>
     | <a href="/mvps/new">Add New</a>
   <%end%>
 <%end%>
