--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -34,11 +34,11 @@
   <th>Wageree</th>
   </thead>
   <tbody>
-  <%proposed_wagers.each do |wager_hash|%>
+  <%proposed_wagers.each do |wager|%>
     <tr>
-      <td><%=wager_hash.title%></td>
-      <td><%=wager_hash.amount.to_i / 100 %></td>
-      <td><%=wager_hash.wageree_id%></td>
+      <td><%=wager.title%></td>
+      <td><%=wager.amount / 100 %></td>
+      <td><%=wager.wageree_id%></td>
     </tr>
   </tbody>
   <%end%>
