--- a/views/show_user.erb
+++ b/views/show_user.erb
@@ -6,12 +6,14 @@
   <thead>
   <td>Deposits</td>
   <td>Distributions</td>
+  <td>Wagers</td>
   <td>Amount</td>
   </thead>
   <tbody>
   <tr>
     <td id="deposits">$<%=deposit_total%></td>
     <td id="distributions">$<%=distribution_total%></td>
+    <td id="wagers">$<%=wagered_total%></td>
     <td id="net_amount">$<%=net_amount%></td>
   </tr>
   </tbody>
