--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,8 +22,8 @@
       <%if !session[:user_id]%>
         <article class="inline">
           <form  method="POST" action="/login">
-            <label for="email">Email:</label>
-            <input class="sm" type="email" id="email" name="email"/>
+            <label for="username">Username:</label>
+            <input class="sm" id="username" name="username"/>
             <label for="password">Password:</label>
             <input class="xs" type="password" id="password" name="password"/>
             <button class="btn">Login</button>
