--- a/views/new_user.erb
+++ b/views/new_user.erb
@@ -2,6 +2,16 @@
 <h1>Register Here</h1>
 
 <form method="POST" action="/users">
+
+  <label for="username">Username:</label>
+  <br/>
+  <input id="username" name="username"/>
+  <br/>
+  <label for="ssn">SSN:</label>
+  <br/>
+  <input id="ssn" name="ssn"/>
+  <br/>
+  
   <label for="email">Email:</label>
   <br/>
   <input type="email" id="email" name="email"/>
